<resources>
    <string name="app_name">RGitHub</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="again">Again to Exit</string>
    <string name="stars">Stars</string>
    <string name="repos">Repositories</string>
    <string name="has_no_more">Has No More</string>
    <string name="stargazers">Stargazers</string>
    <string name="watchers">Watchers</string>
    <string name="forks">Forks</string>
    <string name="language">Language</string>
    <string name="owner">Owner</string>
    <string name="is_private">Private</string>
    <string name="is_public">Public</string>
    <string name="events">Events</string>
    <string name="issues">Issues</string>
    <string name="readme">Readme</string>
    <string name="websit">Website</string>
    <string name="commit">Commits</string>
    <string name="pull">Pull Request</string>
    <string name="source">Source</string>
    <string name="star_this_repo">Star This Repo</string>
    <string name="un_star_this_repo">Unstar This Repo</string>
    <string name="project_event">ProjectEvent</string>
    <string name="person_event">PersonEvent</string>
    <string name="homepage">HomePage</string>
    <string name="search">Search</string>
    <string name="search_text">RepoName</string>
    <string name="not_empty">not empty</string>
    <string name="about">About</string>
    <string name="fragment_first_title">Trending</string>
    <string name="fragment_second_title">News</string>
    <string name="fragment_third_title">Open Issues</string>
    <string name="fragment_fourth_title">Me</string>
    <string name="about_description">A GitHub Client</string>
    <string name="developer_website">Developer Website</string>

    <string name="rgithub_description">一个 GitHub 客户端，对下载过的数据进行缓存（非持久化），重复页面不重复加载，显示更快。由于 GitHub 信息更新不频繁，这样做是可行的。\n\n
        该应用开发动机为没有找到合适的 GitHub 客户端，主要对信息进行查看。如果需要更改信息，还是去 GitHub 网站更方便。\n\n
        该项目收到很多项目启发，参考 README 文件。对于更进一步开发，主要根据本项目开发者实际需求进行开发。\n\n
        同时，本项目的子项目 rgithubandroidsdk 是根据本项目需求开发出的 GitHub API，该 API 未包含全部 GitHub API，但是根据现有结构可以很方便进行扩展，该 GitHub 访问设计文档请参考项目主页。\n\n
        欢迎 Fork， 欢迎 Issue。\n\n
        Email:rwebrtc@gmail.com
    </string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logout Success</string>
    <string name="url_err">url error</string>
    <string name="sp">#</string>
    <string name="please_input">Please Input</string>
    <string name="results">results</string>
    <string name="not_following">Unfollowing</string>
    <string name="notify">Notification</string>
    <string name="no_notify">No notifications</string>
    <string name="repo_feedback">Feedback</string>

</resources>
