<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/stars"
        style="@style/follow_button">

        <TextView
            android:id="@+id/stars_num"
            style="@style/follow_button_text" />

        <TextView
            style="@style/follow_button_text"
            android:text="@string/stargazers" />
    </LinearLayout>

    <View style="@style/vertical_line" />

    <LinearLayout
        android:id="@+id/watch"
        style="@style/follow_button">

        <TextView
            android:id="@+id/watch_num"
            style="@style/follow_button_text" />

        <TextView
            style="@style/follow_button_text"
            android:text="@string/watchers" />
    </LinearLayout>

    <View style="@style/vertical_line" />

    <LinearLayout
        android:id="@+id/forks"
        style="@style/follow_button">

        <TextView
            android:id="@+id/forks_num"
            style="@style/follow_button_text" />

        <TextView
            style="@style/follow_button_text"
            android:text="@string/forks" />
    </LinearLayout>

</LinearLayout>