<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_other_users"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.renyuzhuo.rgithub.activity.OtherUsersActivity">

    <RelativeLayout style="@style/title_style">

        <RelativeLayout
            android:id="@+id/title"
            style="@style/title_style.title_relative_text">

            <TextView
                android:id="@+id/title_text"
                style="@style/title_style.title_text"
                android:text="@string/app_name" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/title"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/setting_items_content_normal_color"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:textSize="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/followers"
                        style="@style/follow_button">

                        <TextView
                            android:id="@+id/followers_num"
                            style="@style/follow_button_text" />

                        <TextView
                            style="@style/follow_button_text"
                            android:text="@string/followers" />
                    </LinearLayout>

                    <View style="@style/vertical_line"></View>

                    <LinearLayout
                        android:id="@+id/following"
                        style="@style/follow_button">

                        <TextView
                            android:id="@+id/following_num"
                            style="@style/follow_button_text" />

                        <TextView
                            style="@style/follow_button_text"
                            android:text="@string/following" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>

